--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Убрать прокрутку */
+  width: 100%; 
+  overflow: hidden;
 }
 
 code {
