--- a/src/Pages/Homepage/Homepage.module.scss
+++ b/src/Pages/Homepage/Homepage.module.scss
@@ -1,4 +1,39 @@
 
+.helppage {
+    position: relative;
+    left: -104px;
+    transition: 32s;
+    // div {
+    //     // transition: 2s;
+    //     position: relative;
+      
+    //     // left: -1024px;
+    //     animation: swipe 3s alternate ;
+    // }
+
+
+}
+
+// @keyframes swipe{
+//     from{
+//         // position: absolute;
+//         // bottom: -60px;
+//         // right: 320px;
+//         // transform: scale(1);
+//     }
+//     to{
+//         // position: absolute;
+//         // translateX:(-100%) ;
+//         left: -10241px;
+//     }
+// }
+
+// .homepage:hover {
+//     position: relative;
+//     left: -1024px;
+
+//     transition: 10s all ease;
+// }
 
 .homepage {
     // width: 100%; 
