--- a/src/Layout/Layout/Layout.module.scss
+++ b/src/Layout/Layout/Layout.module.scss
@@ -2,9 +2,17 @@
 .body {
     background: url(../../assets/background/backgroundSprites.png);
     // background: url(../../assets/background/background.png);
+
+
+
+    // background-size: 100% 100%;
+    // background-position: center;
+
     background-size: 100% 100%;
+    background-position: left;
 
     min-height: calc(100vh);
+
     // background-size: contain no-repeat;
     // background-size: cover;
     // background-size: calc(190vh);
@@ -20,4 +28,7 @@
 .main {
     flex: 1 0 auto;
     padding: 0px 100px;
+
+
+    position: relative;
 }
