--- a/src/Layout/Layout/Layout.module.css
+++ b/src/Layout/Layout/Layout.module.css
@@ -18,6 +18,89 @@
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
   padding: 0px 100px;
-  position: relative;
+}
+
+.sprites__pink1 {
+  position: absolute;
+  z-index: 1;
+  top: 148px;
+  right: 0px;
+}
+
+.sprites__pink1 img {
+  max-width: 600px;
+}
+
+.sprites__bigBacteria {
+  position: absolute;
+  z-index: 1;
+  -webkit-animation: bigBacteriaAnimation 9s infinite;
+          animation: bigBacteriaAnimation 9s infinite;
+}
+
+.sprites__bigBacteria img {
+  width: 200px;
+}
+
+@-webkit-keyframes bigBacteriaAnimation {
+  0% {
+    bottom: -60px;
+    right: 320px;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  25% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  60% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    bottom: -40px;
+    right: 340px;
+  }
+  75% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    bottom: -60px;
+    right: 320px;
+  }
+  100% {
+    bottom: -60px;
+    right: 320px;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes bigBacteriaAnimation {
+  0% {
+    bottom: -60px;
+    right: 320px;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+  25% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  60% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    bottom: -40px;
+    right: 340px;
+  }
+  75% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+    bottom: -60px;
+    right: 320px;
+  }
+  100% {
+    bottom: -60px;
+    right: 320px;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 /*# sourceMappingURL=Layout.module.css.map */
