--- a/src/Pages/Homepage/Homepage.module.css
+++ b/src/Pages/Homepage/Homepage.module.css
@@ -1,33 +1,5 @@
-.appBody {
-  position: relative;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  overflow: hidden;
-}
-
-.appBody__homepage {
-  width: 1024px;
-  min-height: 100%;
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.appBodyTrack {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  border: 3px solid black;
-}
-
 .homepage {
-  min-height: 100%;
-  min-width: 100%;
+  z-index: 2;
 }
 
 .homepage img {
@@ -50,6 +22,7 @@
           align-items: center;
   letter-spacing: 8px;
   line-height: 1.15;
+  z-index: 2;
 }
 
 .sprites__pink1 {
@@ -60,23 +33,56 @@
 }
 
 .sprites__pink1 img {
-  min-width: 600px;
+  min-width: 570px;
 }
 
 .sprites__bigBacteria {
   position: absolute;
   z-index: 1;
-  -webkit-animation: bigBacteriaAnimation 9s infinite;
-          animation: bigBacteriaAnimation 9s infinite;
+  -webkit-animation: bigBacteriaAnimation 9s infinite linear;
+          animation: bigBacteriaAnimation 9s infinite linear;
 }
 
 .sprites__bigBacteria img {
   width: 200px;
 }
 
+.sprites__smallBacteria {
+  position: absolute;
+  z-index: 1;
+  -webkit-animation: smallBacteriaAnimation 5s infinite linear;
+          animation: smallBacteriaAnimation 5s infinite linear;
+}
+
+.sprites__smallBacteria img {
+  width: 70px;
+}
+
+.sprites__tinyBacteria {
+  position: absolute;
+  z-index: 1;
+  -webkit-animation: tinyBacteriaAnimation 9s infinite linear;
+          animation: tinyBacteriaAnimation 9s infinite linear;
+}
+
+.sprites__tinyBacteria img {
+  width: 70px;
+}
+
+.sprites__spikyBacteria {
+  position: absolute;
+  z-index: 3;
+  -webkit-animation: spikyBacteriaAnimation 8s infinite linear;
+          animation: spikyBacteriaAnimation 8s infinite linear;
+}
+
+.sprites__spikyBacteria img {
+  width: 110px;
+}
+
 @-webkit-keyframes bigBacteriaAnimation {
   0% {
-    bottom: -60px;
+    bottom: -90px;
     right: 320px;
     -webkit-transform: scale(1);
             transform: scale(1);
@@ -88,17 +94,17 @@
   60% {
     -webkit-transform: scale(1);
             transform: scale(1);
-    bottom: -40px;
+    bottom: -70px;
     right: 340px;
   }
   75% {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
-    bottom: -60px;
+    bottom: -90px;
     right: 320px;
   }
   100% {
-    bottom: -60px;
+    bottom: -90px;
     right: 320px;
     -webkit-transform: scale(1);
             transform: scale(1);
@@ -107,7 +113,7 @@
 
 @keyframes bigBacteriaAnimation {
   0% {
-    bottom: -60px;
+    bottom: -90px;
     right: 320px;
     -webkit-transform: scale(1);
             transform: scale(1);
@@ -119,20 +125,130 @@
   60% {
     -webkit-transform: scale(1);
             transform: scale(1);
-    bottom: -40px;
+    bottom: -70px;
     right: 340px;
   }
   75% {
     -webkit-transform: scale(1.2);
             transform: scale(1.2);
-    bottom: -60px;
+    bottom: -90px;
     right: 320px;
   }
   100% {
-    bottom: -60px;
+    bottom: -90px;
     right: 320px;
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+}
+
+@-webkit-keyframes tinyBacteriaAnimation {
+  0% {
+    top: 500px;
+    left: 75px;
+  }
+  50% {
+    top: 560px;
+    left: 100px;
+  }
+  100% {
+    top: 500px;
+    left: 75px;
+  }
+}
+
+@keyframes tinyBacteriaAnimation {
+  0% {
+    top: 500px;
+    left: 75px;
+  }
+  50% {
+    top: 560px;
+    left: 100px;
+  }
+  100% {
+    top: 500px;
+    left: 75px;
+  }
+}
+
+@-webkit-keyframes smallBacteriaAnimation {
+  0% {
+    top: 80px;
+    right: 230px;
+  }
+  50% {
+    top: 80px;
+    right: 200px;
+  }
+  100% {
+    top: 80px;
+    right: 230px;
+  }
+}
+
+@keyframes smallBacteriaAnimation {
+  0% {
+    top: 80px;
+    right: 230px;
+  }
+  50% {
+    top: 80px;
+    right: 200px;
+  }
+  100% {
+    top: 80px;
+    right: 230px;
+  }
+}
+
+@-webkit-keyframes spikyBacteriaAnimation {
+  0% {
+    top: 120px;
+    right: 120px;
+  }
+  25% {
+    top: 105px;
+    right: 135px;
+    rotate: -10deg;
+  }
+  50% {
+    top: 90px;
+    right: 150px;
+    rotate: -30deg;
+  }
+  75% {
+    top: 105px;
+    right: 135px;
+  }
+  100% {
+    top: 120px;
+    right: 120px;
+  }
+}
+
+@keyframes spikyBacteriaAnimation {
+  0% {
+    top: 120px;
+    right: 120px;
+  }
+  25% {
+    top: 105px;
+    right: 135px;
+    rotate: -10deg;
+  }
+  50% {
+    top: 90px;
+    right: 150px;
+    rotate: -30deg;
+  }
+  75% {
+    top: 105px;
+    right: 135px;
+  }
+  100% {
+    top: 120px;
+    right: 120px;
   }
 }
 /*# sourceMappingURL=Homepage.module.css.map */
